--- a/Rms frontend/style.css
+++ b/Rms frontend/style.css
@@ -2,7 +2,7 @@
 box-sizing: border-box;
  padding: 0;
  margin: 0;
- font-family: 'Roboto Slab',serif;   
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;   
 }
 body{
     margin: 0;
@@ -36,9 +36,13 @@ header{
     width: 100%;
     z-index: 9999;
 }
+header .fa{
+    display: none;
+}
 .logo{
     cursor: pointer;
     margin-right: auto;
+    width: 150px; height: auto;
 }
 .nav-link{
     list-style: none;
@@ -390,10 +394,6 @@ button:hover{
     height: auto;
     width: 150px;
 }
-.bg-login-content form .input-icons .input-field:focus{
-    border-color: aqua;
-    box-shadow: 0 0 8px 0 dodgerBlue;
-}
 .bg-login-content a{
     color: rgb(88, 206, 245);
     cursor: pointer;
@@ -517,8 +517,103 @@ button:hover{
 .input-icons i{
     background-color: #00312f;
     color: #fff;
-    padding: 12px 10px;
+    padding: 9px 14px;
     width: 50px;
+    padding-top: 13px;
+    padding-bottom: 11px;
     
     
 }
+.sign-up{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0,0.7);
+    display: none;
+    z-index: 99999;
+}
+.sign-up-content{
+    position: relative;
+    width: 1100px;
+    height: 550px;
+    margin: 100px auto;
+    background-color: white;
+    border-radius:  20px 20px ;
+    
+}
+.sign-up-content .sign-box{
+    position: relative;
+    width: calc(1100px - 550px);
+    height: 550px;
+    background-image: url(img/job.png);
+    background-size: cover;
+   align-items: center;
+   text-align: center;
+    margin:0 auto ;
+    float: left;
+    overflow: hidden;
+    box-sizing: border-box;
+    background-position: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /*border-radius:0  20px 20px 0;*/
+}
+.sign-up-content .sign-box:nth-child(2){
+    background-color: #99c2be;
+    background-image: unset;
+    border-radius:0  20px 20px 0;
+}
+.sign-up-content .sign-box:nth-child(1){
+    border-radius:20px 0 0 20px;
+    background-color: saddlebrown;
+}
+.sign-up-content .sign-box .input-field{
+    padding: 9px 25px;
+    margin: 10px auto;
+    width: 50%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    outline: none;
+}
+.sign-up-content .sign-box form{
+    margin-top: 50px;
+}
+.sign-up-content .sign-box form .s-l{
+    font-size: 30px;
+   color: #fff;
+   font-weight: bold;
+}
+
+.sign-up-content .sign-box input[type="checkbox"]{
+    width: 15px;
+    height: 15px;
+    padding: 0;
+    margin: 0;
+    vertical-align: bottom;
+    position: relative;
+    top: -1px;
+    
+}
+.sign-up-content .sign-box label{
+    font-size: 12px;
+}
+.sign-up-content .sign-box label:nth-child(4){
+    color: #0e7b76;
+}
+.sign-up-content .sign-box label:nth-child(3){
+    color: #fff;
+    margin-right: 10px;
+}
+.sign-up-content .sign-box button{
+    background-color: #00312f;
+    padding: 9px 40px;
+    transition: 0.5s;
+}
+.sign-up-content .sign-box button:hover{
+    background-color: #fff;
+    color: #00312f;
+}
+
+  
+
+  
