--- a/Rms frontend/stylemedia.css
+++ b/Rms frontend/stylemedia.css
@@ -191,6 +191,7 @@
     box-sizing: border-box;
     outline: none;
   }
+
   .bg-login-content .user {
     position: absolute;
     top: 0;
@@ -340,7 +341,7 @@
     width: 400px;
     justify-content: center;
     top: 0;
-    height: 500px;
+    height: 1000px;
     margin: 0 auto;
   }
   .recent-content input[type="button"] {
@@ -366,7 +367,7 @@
   }
   .recent-box {
     width: calc(100% - 70px);
-    height: calc(100% - 500px);
+    height: calc(100% - 870px);
     background-color: #fff;
     box-sizing: content-box;
     border-radius: 10px;
@@ -375,6 +376,9 @@
     position: relative;
     display: flex;
     margin: 20px auto;
+  }
+  .recent-box .fa {
+    font-size: 100px;
   }
   .social-menu {
     position: relative;
@@ -388,7 +392,7 @@
     color: #000;
     background-image: url(img/background2.png);
     background-size: cover;
-    background-color: rgb(94, 199, 199);
+
     width: 500px;
   }
   .social-menu li {
@@ -809,5 +813,308 @@
   .post-job-box form .btn-post:hover {
     background-color: #00312f;
     color: #fff;
+  }
+  .job-detail-content {
+    width: 400px;
+    height: 1800px;
+  }
+  .job-detail-head-box {
+    width: 400px;
+    height: 250px;
+    background-color: #00312f;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+  }
+  .jd-content {
+    width: 500px;
+    height: 250px;
+    background-color: #00312f;
+    margin: 0 auto;
+  }
+  .jd-content:nth-child(2) {
+    width: 370px;
+    height: 1000px;
+    background-color: transparent;
+    margin: 0 auto;
+    padding: 50px 10px;
+  }
+  .jd-content-text {
+    height: 200px;
+
+    position: absolute;
+    width: 370px;
+    margin: 0 auto;
+    top: 10%;
+    left: 30%;
+    padding: 40px 50px;
+    color: #fff;
+    font-family: x "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .jd-content-text h2 {
+    font-size: 30px;
+  }
+  .jd-content-text h3 {
+    opacity: 0.6;
+    padding: 5px 10px;
+    font-size: 25px;
+  }
+  .jd-btn {
+    align-items: right;
+    justify-content: right;
+    text-align: right;
+    height: 50px;
+    width: 330px;
+    padding: 10px 10px;
+  }
+  .jd-btn button {
+    border-radius: 0%;
+    color: #00312f;
+    background-color: #fff;
+    border: 2px solid black;
+    padding: 10px 50px;
+    font-weight: 600;
+    transition: 0.5s;
+  }
+  .jd-btn button:hover {
+    color: #fff;
+    background-color: #00312f;
+  }
+  .jd-des-text {
+    width: 370px;
+    height: 80px;
+
+    margin: 0 auto;
+    display: flex;
+    padding: 20px 10px;
+    border: none;
+    color: #00312f;
+  }
+  .jd-des-text:nth-child(6) {
+    margin-top: 50px;
+    display: block;
+    height: 300px;
+    border: none;
+    margin-bottom: 50px;
+  }
+  .jd-des-text:nth-child(7) {
+    display: block;
+    height: 300px;
+    border: none;
+    margin-bottom: 50px;
+  }
+  .jd-des-text:nth-child(8) {
+    display: block;
+    height: 250px;
+    border: none;
+  }
+  .des-text {
+    width: 370px;
+    height: 50px;
+
+    text-align: right;
+    border-bottom: 1px solid rgb(0, 0, 0, 0.2);
+    margin: 0 auto;
+    position: absolute;
+    margin-left: 90px;
+    color: #00312f;
+  }
+  .jd-des-text:nth-child(6) h3 {
+    font-size: 30px;
+    padding-bottom: 30px;
+  }
+  .jd-des-text:nth-child(7) h3 {
+    font-size: 30px;
+    padding-bottom: 30px;
+  }
+  .jd-des-text:nth-child(8) h3 {
+    font-size: 30px;
+    padding-bottom: 30px;
+  }
+
+  .des-text h3 {
+    font-weight: 100;
+  }
+  .cp-fill {
+    display: flex;
+
+    padding: 10px 0px;
+  }
+  .cp-fill p {
+    margin-left: 40px;
+  }
+  .cp-fill label {
+    font-weight: 700;
+  }
+  .cp-fill label:nth-child(2) {
+    margin-left: 40px;
+  }
+  .apply {
+    position: fixed;
+    width: 500px;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0, 0.7);
+    display: none;
+    z-index: 99999;
+  }
+  .apply-content {
+    position: relative;
+    width: 480px;
+    height: 500px;
+    margin: 100px auto;
+    background-color: white;
+    border-radius: 20px 20px;
+  }
+  .apply-content .apply-box {
+    position: relative;
+    width: 480px;
+    height: 500px;
+    background-image: url(img/job.png);
+    background-size: cover;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    float: left;
+    overflow: hidden;
+    box-sizing: border-box;
+    background-position: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    /*border-radius:0  20px 20px 0;*/
+  }
+  .apply-content .apply-box:nth-child(1) {
+    display: none;
+  }
+  .apply-content .apply-box:nth-child(2) {
+    background-color: #99c2be;
+    background-image: unset;
+    border-radius: 20px 20px 20px 20px;
+  }
+  .apply-content .apply-box:nth-child(1) {
+    border-radius: 20px 0 0 20px;
+    background-color: saddlebrown;
+  }
+  .apply-content .apply-box .input-field {
+    padding: 9px 25px;
+    margin: 10px auto;
+    width: 50%;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    outline: none;
+  }
+  .apply-content .apply-box form {
+    margin-top: 50px;
+  }
+  .apply-content .apply-box form .s-l {
+    font-size: 30px;
+    color: #fff;
+    font-weight: bold;
+  }
+
+  .apply-content .apply-box input[type="checkbox"] {
+    width: 15px;
+    height: 15px;
+    padding: 0;
+    margin: 0;
+    vertical-align: bottom;
+    position: relative;
+    top: -1px;
+  }
+  .apply-content .apply-box label {
+    font-size: 12px;
+  }
+  .apply-content .apply-box label:nth-child(4) {
+    color: #0e7b76;
+  }
+  .apply-content .apply-box label:nth-child(3) {
+    color: #fff;
+    margin-right: 10px;
+  }
+  .apply-content .apply-box button {
+    background-color: #00312f;
+    padding: 9px 40px;
+    transition: 0.5s;
+  }
+  .apply-content .apply-box button:nth-child(2) {
+    width: 240px;
+    color: #00312f;
+    background-color: #fff;
+  }
+  .apply-content .apply-box button:hover {
+    background-color: #fff;
+    color: #00312f;
+  }
+  /*** about Us ***/
+  .poster h3 {
+    position: relative;
+    color: #fff;
+    font-size: 45px;
+    text-align: center;
+    top: 80px;
+  }
+  .poster img {
+    margin-top: -30px;
+  }
+  .container-about {
+    width: 500px;
+    height: 2200px;
+
+    position: relative;
+    color: #00312f;
+  }
+  .content-about {
+    width: 400px;
+    height: 1100px;
+    margin: 10px auto;
+    align-items: center;
+    justify-content: center;
+    display: inline-block;
+    position: relative;
+  }
+  .container-about h1 {
+    text-align: center;
+    padding: 10px 10px;
+  }
+  .about-box {
+    width: calc(100% - 400px);
+    height: calc(100% - 750px);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10px 10px;
+  }
+  .about-box img {
+    margin-left: 140px;
+  }
+  .about-box h4 {
+    font-size: 30px;
+    width: 270px;
+    margin-left: 110px;
+  }
+  @font-face {
+    font-family: "Century Gothic"; /*a name to be used later*/
+    src: url("http://domain.com/fonts/font.ttf"); /*URL to font*/
+  }
+  .about-box h4 {
+    font-family: "Century Gothic";
+    font-weight: 600;
+  }
+
+  .container-about h2:nth-child(7) {
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: underline;
+    font-size: 45px;
+  }
+  .container-about h2 {
+    text-align: center;
+    padding: 10px 10px;
+  }
+  .content-about .about-box img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 15px;
   }
 }
